--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@
 hs_err_pid*
 /bingle-spring-boot-0.2-launch.jar
 /bingle-spring-boot-0.2.jar
-/src/test/resource/2015092120583295.zip
+/src/test/resource/**
