- change jobTimeout variable able to change in application-stitch.properties (limits : Autopano - 20min, nadircap - 30sec)
Signed-off-by: KimSeonHo <sinho0689@gmail.com>

--- a/src/main/resources/config/application-stitch.properties
+++ b/src/main/resources/config/application-stitch.properties
@@ -4,3 +4,9 @@
 stitch.path.imagedir=image
 stitch.path.tempdir=temp
 stitch.path.tools=tools
+
+# 1000(ms) * 60(s) * 20(min)
+stitch.aps.jobtimeout=1200000
+
+# 30sec
+stitch.nadircap.jobtimeout=3000
