- stitch.nadircap.jobtimeout=300000
Signed-off-by: KimSeonHo <sinho0689@gmail.com>

--- a/src/main/resources/config/application-stitch.properties
+++ b/src/main/resources/config/application-stitch.properties
@@ -8,5 +8,5 @@ stitch.path.tools=tools
 # 1000(ms) * 60(s) * 20(min)
 stitch.aps.jobtimeout=1200000
 
-# 30sec
-stitch.nadircap.jobtimeout=30000
+# 1000(ms) * 60(s) * 5(min)
+stitch.nadircap.jobtimeout=300000
